[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Gameplay/Tips.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/tips/tips-Sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.0
height = 96.0

[sub_resource type="Animation" id=1]
resource_name = "idle_0"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Tips" type="PathFollow2D"]
rotate = false
cubic_interp = false
loop = false
lookahead = 0.001
script = ExtResource( 1 )
speed = 150.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 8
vframes = 3
frame = 8

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_0"
anims/idle_0 = SubResource( 1 )
anims/idle_1 = SubResource( 2 )
anims/run = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
